# tupi

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/src/: example.cpp
include/tupi/: buffer.h  camera.h  command_buffer.h  command_pool.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  descriptor_set_layout_binding.h  engine.h  extension_set.h  fence.h  frame.h  framebuffer.h  fwd.h  gui.h  handle.h  image.h  image_2d.h  image_view.h  image_view_2d.h  input.h  logical_device.h  physical_device.h  pipeline.h  pipeline_color_blend_state.h  pipeline_depth_stencil_state.h  pipeline_dynamic_state.h  pipeline_input_assembly.h  pipeline_layout.h  pipeline_multisample_state.h  pipeline_rasterization_state.h  pipeline_vertex_input.h  pipeline_viewport_state.h  queue.h  queue_family.h  render_pass.h  sampler.h  scoped_single_command.h  semaphore.h  shader.h  (+11 more)
include/tupi/glfw/: input.h  surface.h  window.h
include/tupi/gltf/: accessor.h  buffer.h  buffer_view.h  file.h  image.h  material.h  mesh.h  mesh_primitive.h  node.h  sampler.h  scene.h  texture.h
include/tupi/internal/: creatable.h  non_copyable.h  resource.h
resources/: GearboxAssy.gltf
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: buffer.cpp  camera.cpp  command_buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  descriptor_set_layout_binding.cpp  engine.cpp  extension_set.cpp  fence.cpp  frame.cpp  framebuffer.cpp  gui.cpp  image.cpp  image_2d.cpp  image_view.cpp  image_view_2d.cpp  logical_device.cpp  physical_device.cpp  pipeline.cpp  pipeline_color_blend_state.cpp  pipeline_depth_stencil_state.cpp  pipeline_dynamic_state.cpp  pipeline_input_assembly.cpp  pipeline_layout.cpp  pipeline_multisample_state.cpp  pipeline_rasterization_state.cpp  pipeline_vertex_input.cpp  pipeline_viewport_state.cpp  queue.cpp  queue_family.cpp  render_pass.cpp  sampler.cpp  semaphore.cpp  shader.cpp  subpass_description.cpp  surface.cpp  swapchain.cpp  swapchain_image.cpp  (+2 more)
src/glfw/: #window.cpp#  .#window.cpp  input.cpp  surface.cpp  window.cpp
src/gltf/: accessor.cpp  buffer.cpp  buffer_view.cpp  file.cpp  mesh_primitive.cpp
tests/: CMakeLists.txt  handle_test.cpp  resource.cpp
